platform/overlays/istio/helloistio/helloworld-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: helloworld
  labels:
    istio-injection: enabled
spec: {}
status: {}
