platform/overlays/istio/helloistio/helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  strategy: {}
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - image: mikewilliamson/helloworld
        name: helloworld
        resources: {}
status: {}
