platform/overlays/istio/helloistio/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: helloworld
spec:
  ports:
  - name: http-helloworld
    port: 80
    targetPort: 3000
  selector:
    app: helloworld
  type: ClusterIP
status:
  loadBalancer: {}
